// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconMetadataThick should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-metadata-thick "
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    className="fill-color"
    d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm4.37,13.43a1,1,0,0,1-.37.07,1,1,0,0,1-.93-.63L13.9,11.94l-1,2a1,1,0,0,1-1.78,0l-1-2L8.93,14.87a1,1,0,1,1-1.86-.74l2-5a1,1,0,0,1,1.82-.08L12,11.26l1.11-2.21A1,1,0,0,1,14,8.5a1,1,0,0,1,.89.63l2,5A1,1,0,0,1,16.37,15.43Z"
    fill="#999"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconMetadataThick should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-metadata-thick test"
  height={100}
  title="title"
  viewBox="0 0 24 24"
  width={200}
>
  <path
    className="fill-color"
    d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm4.37,13.43a1,1,0,0,1-.37.07,1,1,0,0,1-.93-.63L13.9,11.94l-1,2a1,1,0,0,1-1.78,0l-1-2L8.93,14.87a1,1,0,1,1-1.86-.74l2-5a1,1,0,0,1,1.82-.08L12,11.26l1.11-2.21A1,1,0,0,1,14,8.5a1,1,0,0,1,.89.63l2,5A1,1,0,0,1,16.37,15.43Z"
    fill="#999"
  />
</AccessibleSVG>
`;
